@@ -1,8 +1,6 @@
 package pfe.back_end.controleurs.document;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.io.Resource;
-import org.springframework.core.io.UrlResource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -13,14 +11,12 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import pfe.back_end.modeles.entites.Document;
 import pfe.back_end.modeles.entites.InvitationSignature;
-import pfe.back_end.modeles.entites.Role;
 import pfe.back_end.modeles.entites.Utilisateur;
 import pfe.back_end.repositories.sql.DocumentRepository;
 import pfe.back_end.repositories.sql.UtilisateurRepository;
+import pfe.back_end.repositories.sql.InvitationRepository;
 import pfe.back_end.services.document.ServiceGestionDocuments;
 
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -28,15 +24,11 @@ import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/documents")
-
 @CrossOrigin(origins = {
     "https://localhost:3000",
     "http://localhost:3000", 
-    "https://memoire-frontend.onrender.com"  // ← AJOUTEZ CETTE LIGNE
+    "https://memoire-frontend.onrender.com"
 }, allowCredentials = "true")
-
-
-
 public class ControleurDocument {
 
     @Autowired
@@ -48,9 +40,11 @@ public class ControleurDocument {
     @Autowired
     private UtilisateurRepository utilisateurRepository;
 
-    @Autowired private pfe.back_end.repositories.sql.InvitationRepository invitationRepository;
+    @Autowired 
+    private InvitationRepository invitationRepository;
+
     /**
-     * ✅ Upload d'un document initial
+     * ✅ Upload d'un document initial (Stockage BDD)
      */
     @PostMapping("/upload")
     @Transactional
@@ -75,22 +69,15 @@ public class ControleurDocument {
     }
 
     /**
-     * ✅ Liste tous les documents selon le rôle (Admin, Employé, etc.)
+     * ✅ Liste uniquement les documents auto-signés par l'utilisateur
      */
-
-    /**
-     * ✅ Liste uniquement les documents signés (pour le composant ListeDocumentsAutoSignes)
-     */
-
-    @GetMapping("/liste-signes-auto") // Nouveau endpoint spécifique
+    @GetMapping("/liste-signes-auto")
     @Transactional(readOnly = true)
     public ResponseEntity<?> listerDocumentsAutoSignes(Authentication auth) {
         try {
             Utilisateur user = utilisateurRepository.findByEmailIgnoreCase(auth.getName())
                     .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
 
-            // On cherche les documents où l'utilisateur est PROPRIÉTAIRE ET SIGNATAIRE
-            // Et où le flag estSigne est à true
             List<Document> docs = documentRepository.findByProprietaireIdAndSignataireIdAndEstSigneTrue(user.getId(), user.getId());
 
             List<Map<String, Object>> response = docs.stream().map(doc -> {
@@ -108,64 +95,41 @@ public class ControleurDocument {
         }
     }
 
-/*
-    @GetMapping("/liste-signes")
+    /**
+     * ✅ Téléchargement SÉCURISÉ (Propriétaire ou Signataire)
+     */
+    @GetMapping("/download/{id}")
     @Transactional(readOnly = true)
-    public ResponseEntity<List<Document>> listerDocumentsSignes(Authentication auth) {
+    public ResponseEntity<byte[]> telechargerDocument(@PathVariable Long id, Authentication auth) {
         try {
-            Utilisateur user = utilisateurRepository.findByEmailIgnoreCase(auth.getName())
-                    .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
+            Document doc = documentRepository.findById(id)
+                    .orElseThrow(() -> new RuntimeException("Document introuvable"));
 
-            // Nécessite la méthode dans ton repository
-            List<Document> docs = documentRepository.findByProprietaireIdAndEstSigneTrue(user.getId());
+            String emailConnecte = auth.getName();
+            boolean estProprietaire = doc.getProprietaire() != null && doc.getProprietaire().getEmail().equalsIgnoreCase(emailConnecte);
+            boolean estSignataire = doc.getSignataire() != null && doc.getSignataire().getEmail().equalsIgnoreCase(emailConnecte);
 
-            docs.forEach(d -> {
-                d.setProprietaire(null);
-                d.setSignataire(null);
-            });
+            if (!estProprietaire && !estSignataire) {
+                return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+            }
 
-            return ResponseEntity.ok(docs);
+            byte[] contenu = doc.getContenu();
+            if (contenu == null) {
+                return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+            }
+
+            return ResponseEntity.ok()
+                    .contentType(MediaType.APPLICATION_PDF)
+                    .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + doc.getNomFichier() + "\"")
+                    .body(contenu);
+
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
     }
-*/
-    /**
-     * ✅ Téléchargement SÉCURISÉ (Vérifie si l'utilisateur est concerné par le doc)
-     */
-@GetMapping("/download/{id}")
-@Transactional(readOnly = true)
-public ResponseEntity<byte[]> telechargerDocument(@PathVariable Long id, Authentication auth) {
-    try {
-        Document doc = documentRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Document introuvable"));
-
-        String emailConnecte = auth.getName();
-        boolean estProprietaire = doc.getProprietaire() != null && doc.getProprietaire().getEmail().equalsIgnoreCase(emailConnecte);
-        boolean estSignataire = doc.getSignataire() != null && doc.getSignataire().getEmail().equalsIgnoreCase(emailConnecte);
-
-        if (!estProprietaire && !estSignataire) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
-        }
-
-        // ✅ RÉCUPÉRATION DEPUIS LA BDD (plus de Path ou de Resource)
-        byte[] contenu = doc.getContenu();
-        if (contenu == null) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-        }
-
-        return ResponseEntity.ok()
-                .contentType(MediaType.APPLICATION_PDF)
-                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + doc.getNomFichier() + "\"")
-                .body(contenu);
-
-    } catch (Exception e) {
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-    }
-}
 
     /**
-     * ✅ Suppression sécurisée
+     * ✅ Suppression sécurisée (Seul le propriétaire peut supprimer)
      */
     @DeleteMapping("/supprimer/{id}")
     @Transactional
@@ -174,7 +138,6 @@ public ResponseEntity<byte[]> telechargerDocument(@PathVariable Long id, Authent
             Document doc = documentRepository.findById(id)
                     .orElseThrow(() -> new RuntimeException("Document introuvable"));
 
-            // Vérification : Seul le propriétaire peut supprimer le document
             if (doc.getProprietaire() == null || !doc.getProprietaire().getEmail().equalsIgnoreCase(auth.getName())) {
                 return ResponseEntity.status(HttpStatus.FORBIDDEN).body("Action non autorisée");
             }
@@ -186,7 +149,9 @@ public ResponseEntity<byte[]> telechargerDocument(@PathVariable Long id, Authent
         }
     }
 
-
+    /**
+     * ✅ Liste tous les documents signés appartenant à l'utilisateur
+     */
     @GetMapping("/mes-documents-signes")
     @Transactional(readOnly = true)
     public ResponseEntity<?> getMesDocumentsSignes(Authentication auth) {
@@ -194,7 +159,6 @@ public ResponseEntity<byte[]> telechargerDocument(@PathVariable Long id, Authent
             Utilisateur me = utilisateurRepository.findByEmailIgnoreCase(auth.getName())
                     .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
 
-            // On récupère les documents dont l'utilisateur est propriétaire et qui sont signés
             List<Document> docs = documentRepository.findByProprietaireIdAndEstSigneTrue(me.getId());
 
             List<Map<String, Object>> response = docs.stream().map(doc -> {
@@ -202,14 +166,10 @@ public ResponseEntity<byte[]> telechargerDocument(@PathVariable Long id, Authent
                 map.put("id", doc.getId());
                 map.put("nomDocument", doc.getNomFichier());
 
-                // LOGIQUE DE RÉCUPÉRATION DU SIGNATAIRE
                 if (doc.getSignataire() != null) {
-                    // Cas : Signature interne (un utilisateur de la plateforme)
                     map.put("signataire", doc.getSignataire().getPrenom() + " " + doc.getSignataire().getNom());
                     map.put("email", doc.getSignataire().getEmail());
                 } else {
-                    // Cas : Signature externe (on cherche l'invitation liée à ce document)
-                    // On récupère la dernière invitation signée pour ce document
                     invitationRepository.findByDocument(doc).stream()
                             .filter(inv -> "SIGNE".equals(inv.getStatut()))
                             .findFirst()
@@ -225,16 +185,20 @@ public ResponseEntity<byte[]> telechargerDocument(@PathVariable Long id, Authent
                             );
                 }
 
-                map.put("dateSignature", doc.getDateCreation()); // Ou doc.getDateHorodatage() si tu l'utilises
+                map.put("dateSignature", doc.getDateCreation());
                 map.put("statut", "SIGNE");
                 return map;
-            }).toList();
+            }).collect(Collectors.toList());
 
             return ResponseEntity.ok(response);
         } catch (Exception e) {
             return ResponseEntity.status(500).body(Map.of("erreur", e.getMessage()));
         }
     }
+
+    /**
+     * ✅ Liste des invitations envoyées par l'utilisateur
+     */
     @GetMapping("/mes-invitations")
     @Transactional(readOnly = true)
     public ResponseEntity<?> getMesInvitations(Authentication auth) {
@@ -247,24 +211,18 @@ public ResponseEntity<byte[]> telechargerDocument(@PathVariable Long id, Authent
             List<Map<String, Object>> response = list.stream().map(inv -> {
                 Map<String, Object> map = new HashMap<>();
                 map.put("id", inv.getId());
-
-                // AJOUT CRUCIAL : l'ID du document pour le téléchargement
                 if (inv.getDocument() != null) {
                     map.put("documentId", inv.getDocument().getId());
                     map.put("nomFichier", inv.getDocument().getNomFichier());
                 } else {
                     map.put("nomFichier", "Document sans nom");
                 }
-
                 map.put("prenomSignataire", inv.getPrenomSignataire());
                 map.put("nomSignataire", inv.getNomSignataire());
                 map.put("emailDestinataire", inv.getEmailDestinataire());
                 map.put("dateInvitation", inv.getDateInvitation());
                 map.put("dateSignature", inv.getDateSignature());
-
-                // ✅ AJOUTER LE TYPE DE SIGNATURE
                 map.put("typeSignature", inv.getTypeSignature() != null ? inv.getTypeSignature() : "simple");
-
                 map.put("statut", inv.getStatut());
                 return map;
             }).collect(Collectors.toList());
@@ -275,27 +233,27 @@ public ResponseEntity<byte[]> telechargerDocument(@PathVariable Long id, Authent
         }
     }
 
+    /**
+     * ✅ Téléchargement spécifique pour documents signés (Utilisé par les liens d'invitation ou de suivi)
+     */
+    @GetMapping("/download-signe/{documentId}")
+    public ResponseEntity<?> telechargerDocumentSigne(@PathVariable Long documentId) {
+        try {
+            Document doc = documentRepository.findById(documentId)
+                    .orElseThrow(() -> new RuntimeException("Document ID " + documentId + " non trouvé"));
 
-@GetMapping("/download-signe/{documentId}")
-public ResponseEntity<?> telechargerDocumentSigne(@PathVariable Long documentId, Authentication auth) {
-    try {
-        Document doc = documentRepository.findById(documentId)
-                .orElseThrow(() -> new RuntimeException("Document ID " + documentId + " non trouvé en BDD"));
+            byte[] contenu = doc.getContenu();
+            if (contenu == null) {
+                return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Fichier binaire absent en BDD");
+            }
 
-        // ✅ RÉCUPÉRATION DEPUIS LA BDD
-        byte[] contenu = doc.getContenu();
-        if (contenu == null) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Fichier binaire absent en BDD");
+            return ResponseEntity.ok()
+                    .contentType(MediaType.APPLICATION_PDF)
+                    .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + doc.getNomFichier() + "\"")
+                    .body(contenu);
+
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body("Erreur interne : " + e.getMessage());
         }
-
-        return ResponseEntity.ok()
-                .contentType(MediaType.APPLICATION_PDF)
-                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + doc.getNomFichier() + "\"")
-                .body(contenu);
-
-    } catch (Exception e) {
-        return ResponseEntity.status(500).body("Erreur interne : " + e.getMessage());
     }
-}
-
 }
